be-admin.yml
---
apiVersion: v1
kind: Service
metadata:
  name: be-admin
  namespace: vlogmakelaars-prod
spec:
  selector:
    app: be-admin
    tier: backend
    version: v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
---

---

---


---

---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-admin
  labels:
    app: be-admin
    tier: backend
    version: v1
  annotations:
    image.openshift.io/triggers: |-
      [{"from":{"kind":"ImageStreamTag","name":"be-admin:latest","namespace":"vlogmakelaars-prod"},"fieldPath":"spec.template.spec.containers[?(@.name==\"be-admin\")].image","pause":"false"}]
  namespace: vlogmakelaars-prod
spec:
  selector:
    matchLabels:
      app: be-admin
      tier: backend
      version: v1

  replicas: 1
  template:
    metadata:
      name: be-admin
      #annotations:
        #sidecar.istio.io/inject: "true" # Enabling service mesh data plane envoy/sidecar
      labels:
        app: be-admin
        tier: backend
        version: v1
    spec:
      containers:
        - name: be-admin
          image: 'image-registry.openshift-image-registry.svc:5000/vlogmakelaars-prod/be-admin:latest'
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
          command: ["node", "dist/main"]
---
