fe_admin.yaml
---
---
---
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-admin
  annotations:
    image.openshift.io/triggers: |-
      [{"from":{"kind":"ImageStreamTag","name":"fe-admin:latest","namespace":"vlogmakelaars-prod"},"fieldPath":"spec.template.spec.containers[?(@.name==\"fe-admin\")].image","pause":"false"}]
  namespace: vlogmakelaars-prod
spec:
  selector:
    matchLabels:
      app: fe-admin
      tier: frontend
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: fe-admin
        tier: frontend
        name: fe-admin
        version: v1
    spec:
      containers:
        - name: fe-admin
          image: 'image-registry.openshift-image-registry.svc:5000/vlogmakelaars-prod/fe-admin:latest'
          ports:
            - containerPort: 8052
          imagePullPolicy: Always
#  strategy:
#    type: RollingUpdate
#    rollingUpdate:
#      maxUnavailable: 25%
#      maxSurge: 25%
---
---
apiVersion: v1
kind: Service
metadata:
  name: fe-admin
  namespace: vlogmakelaars-prod
  labels:
    app: fe-admin
    tier: frontend
    version: v1
spec:
  selector:
    app: fe-admin
    tier: frontend
    version: v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8052
---
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fe-admin
  labels:
    app: fe-admin
    tier: frontend
    version: v1
  namespace: vlogmakelaars-prod
